temporary-datastore-virtuoso/deploymentConfig.yaml
kind: DeploymentConfig
apiVersion: apps.openshift.io/v1
metadata:
  name: temporary-virtuoso
  namespace: ndc-dev
  labels:
    application: temporary-virtuoso
spec:
  strategy:
    type: Rolling
    rollingParams:
      updatePeriodSeconds: 1
      intervalSeconds: 1
      timeoutSeconds: 600
      maxUnavailable: 25%
      maxSurge: 25%
    resources: {}
    activeDeadlineSeconds: 21600
  replicas: 1
  revisionHistoryLimit: 10
  test: false
  selector:
    deploymentConfig: temporary-virtuoso
  template:
    metadata:
      name: temporary-virtuoso
      creationTimestamp: null
      labels:
        application: temporary-virtuoso
        deploymentConfig: temporary-virtuoso
    spec:
      containers:
        - resources:
            limits:
              cpu: 800m
              memory: 1Gi
            requests:
              cpu: 500m
              memory: 512Mi
          readinessProbe:
            httpGet:
              path: /sparql
              port: 8890
              scheme: HTTP
            initialDelaySeconds: 10
            timeoutSeconds: 2
            periodSeconds: 8
            successThreshold: 1
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /sparql
              port: 8890
              scheme: HTTP
            initialDelaySeconds: 10
            timeoutSeconds: 2
            periodSeconds: 8
            successThreshold: 1
            failureThreshold: 3
          terminationMessagePath: /dev/termination-log
          name: temporary-virtuoso
          ports:
            - name: http
              containerPort: 8890
              protocol: TCP
          imagePullPolicy: Always
          terminationMessagePolicy: File
          image: quay.io/ash1425/virtuoso-nonroot:3
          volumeMounts:
            - name: foo
              mountPath: "/etc/foo"
              readOnly: true
      restartPolicy: Always
      terminationGracePeriodSeconds: 75
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
      volumes:
        - name: foo
          secret:
            secretName: virtuoso-dev
