temporary-datastore-virtuoso/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: temporary-virtuoso
  namespace: ndc-prod
  labels:
    application: temporary-virtuoso
spec:
  ports:
    - protocol: TCP
      port: 8890
      targetPort: 8890
  selector:
    deploymentConfig: temporary-virtuoso
  sessionAffinity: None
