temporary-datastore-virtuoso/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: temporary-virtuoso
  namespace: ndc-test
  labels:
    application: temporary-virtuoso
spec:
  to:
    kind: Service
    name: temporary-virtuoso
    weight: 100
  port:
    targetPort: 9200
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
